# congelado

./: .bazelrc  .clang-format  .clangd  .gitignore  BUILD.bazel  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  MODULE.bazel  conanfile.py  makefile  xmake.lua
bazel/: congelado.bzl  copts.bzl  editor.bzl  proto.bzl
benchmarks/utils/queue/: atomiclist.cc
cmake/: cache.cmake  conan.cmake  conan_provider.cmake  grpc.cmake  options.cmake  props.cmake  smidjson.cmake
conan/: congelado  graph.txt
include/: congelado.h
include/modules/: asio.cppm  fcntl.cppm  net.cppm  netdb.cppm  openssl.cppm  socket.cppm  unistd.cppm  winsock2.cppm
include/transport/client/tcp/: base.cppm  posix.cppm  types.cppm  win32.cppm
include/transport/client/udp/: base.cppm  posix.cppm  types.cppm  win32.cppm
include/transport/codec/common/: atom.cppm  consts.cppm  huffman.cppm  shared.cppm  table.cppm  types.cppm
include/transport/codec/hpack/: consts.cppm  hpack.cppm  table.cppm  types.cppm
include/transport/codec/qpack/: qpack.cppm  table.cppm  types.cppm
include/transport/codec/quic/: connection.cppm  crypto.cppm  quic.cppm  tls.cppm  types.cppm
include/transport/error/: error.cppm  http.cppm
include/transport/server/http2/: base.cppm  posix.cppm  types.cppm  win32.cppm
include/transport/server/http3/: base.cppm  types.cppm
include/transport/server/udp/: base.cppm  posix.cppm  types.cppm  win32.cppm
include/transport/socket/: base.cppm  posix.cppm  types.cppm  win32.cppm
include/transport/tmp/: qpack.cppm
include/transport/transport/tcp/: base.cppm  posix.cppm  types.cppm  win32.cppm
include/transport/transport/tls/: base.cppm  basic.cppm  http2.cppm  http3.cppm  quic.cppm  tls.cppm  types.cppm
include/transport/transport/udp/: base.cppm  posix.cppm  types.cppm  win32.cppm
include/transport/types/: http.cppm
include/utils/: consts.cppm  helper.cppm  helper.h
include/utils/queue/: atomic_list.cppm  node.cppm  page.cppm  pager.cppm  queue.cppm
proto/: BUILD  address.proto
scripts/: run_valgrind.sh
src/: main.cc
src/utils/queue/: atomic_list.cc  page.cc  pager.cc  queue.cc
tests/transport/hpack/: test.cc
tests/utils/queue/: atomiclist.cc  pager.cc
