module(
    name = "congelado",
    version = "0.1.0",
    compatibility_level = 1,
)

# Deps
bazel_dep(name = "grpc", version = "1.74.1")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "simdjson", version = "4.2.4")
bazel_dep(name = "concurrentqueue", version = "1.0.4")
bazel_dep(name = "doctest", version = "2.4.12.bcr.1")
bazel_dep(name = "catch2", version = "3.13.0")

# Rules
bazel_dep(name = "rules_cc", version = "0.2.16")

bazel_dep(name = "toolchains_llvm", version = "1.6.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "22.1.0",
    extra_llvm_distributions = {
        "LLVM-22.1.0-Linux-X64.tar.xz": "8d662e425e46c48b45f5f970770b5e37f323607c8c2cbc371593fc9c4ba1e7b3",
    },
)
use_repo(llvm, "llvm_toolchain")
# use_repo(llvm, "llvm_toolchain_llvm") # if you depend on specific tools in scripts

register_toolchains("@llvm_toolchain//:all")

# Editor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    branch = "main",
)

